; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_change_a.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_pf.c_pf_change_a.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pf_change_a(i8* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = bitcast i32* %9 to i8*
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = call i32 @memcpy(i8* %10, i32* %12, i32 4)
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @memcpy(i8* %14, i32* %7, i32 4)
  %16 = load i32*, i32** %6, align 8
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %9, align 4
  %19 = sdiv i32 %18, 65536
  %20 = load i32, i32* %7, align 4
  %21 = sdiv i32 %20, 65536
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @pf_cksum_fixup(i32 %17, i32 %19, i32 %21, i32 %22)
  %24 = load i32, i32* %9, align 4
  %25 = srem i32 %24, 65536
  %26 = load i32, i32* %7, align 4
  %27 = srem i32 %26, 65536
  %28 = load i32, i32* %8, align 4
  %29 = call i32 @pf_cksum_fixup(i32 %23, i32 %25, i32 %27, i32 %28)
  %30 = load i32*, i32** %6, align 8
  store i32 %29, i32* %30, align 4
  ret void
}

declare dso_local i32 @memcpy(i8*, i32*, i32) #1

declare dso_local i32 @pf_cksum_fixup(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
